<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:background="@color/item_gray_white">
    
    <LinearLayout android:layout_width="600dp"
        android:layout_height="match_parent"
	    android:orientation="vertical" >
	    
	    <TextView 
	     	android:id="@+id/wifi_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:textSize="@dimen/title_text_size"
			android:textColor="@color/textwhite"/>
	    
	    <TextView 
	     	android:id="@+id/wifi_pw"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40dp"
			android:layout_marginTop="10dp"
			android:textSize="@dimen/title_text_size"
			android:textColor="@color/textwhite"
			android:text="@string/password"/>
	    
	     <EditText 
	     	android:id="@+id/password_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:layout_marginBottom="60dp"
			android:paddingLeft="15dp"
	    	android:paddingRight="15dp"
	        android:background="@color/item_gray"
	        android:singleLine="true"
	        android:ellipsize="end"
	        android:inputType="textPassword"
	        android:textColor="@color/textwhite"
	        android:cursorVisible="true"
	        android:textCursorDrawable="@null"
	        android:textSize="30sp" 
	        android:imeOptions="actionDone"/>
	
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal">
		    <Button
		        android:id="@+id/cancel_btn"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textColor="@color/textwhite"
		        android:textSize="@dimen/dialog_btn_size" 
		        android:text="@string/cancel"
		        android:background="@drawable/btn_dialog"/>
		    
		    <Button
		        android:id="@+id/connect_btn"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textColor="@color/textwhite"
		        android:textSize="@dimen/dialog_btn_size" 
		        android:text="@string/connect"
		        android:background="@drawable/btn_dialog"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
